<resources>
    <string name="app_name">ContactList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Отмена</string>
    <string name="edit_email">email</string>
    <string name="edit_last_name">Ladt Name</string>
    <string name="edit_name">Name</string>
</resources>
