<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#717171"
    tools:context="ru.vaszol.contactlist.Main2Activity">

    <EditText
        android:id="@+id/edit_name"
        android:text="@string/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/edit_last_name"
        android:text="@string/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edit_email"
        android:text="@string/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        />
    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_view"
        android:padding="5dp"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/btn_ok"
        android:text="@string/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_ok"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_cancel"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
